ADD: a[ font-weight: bold; ]

--- a/css/creative.css
+++ b/css/creative.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Merriweather', 'Helvetica Neue', Arial, serif;
 }
 
 hr {
@@ -20,6 +20,7 @@ hr.light {
 
 a {
   color: #F05F40;
+  font-weight: bold;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
