--- a/css/creative.css
+++ b/css/creative.css
@@ -20,7 +20,7 @@ hr.light {
 
 a {
   color: #F05F40;
-  font-weight: bold;
+  font-weight: 1000;
   -webkit-transition: all 0.2s;
   -moz-transition: all 0.2s;
   transition: all 0.2s;
