--- a/css/creative.css
+++ b/css/creative.css
@@ -22,6 +22,14 @@ br {
   line-height: 100%
 }
 
+table, th, td {
+    border: 5px solid white;
+}
+
+td {
+  text-align:left;
+}
+
 a {
   color: #F05F40;
   font-weight: bold;
