MV: coursework html table to bootstrap

--- a/css/creative.css
+++ b/css/creative.css
@@ -23,11 +23,16 @@ br {
 }
 
 table, th, td {
-    border: 5px solid white;
+  border-spacing: 10px;
+}
+
+table {
+
 }
 
 td {
   text-align:left;
+  color: black;
 }
 
 a {
