FIX: Kino buttons

--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,10 @@ img::-moz-selection {
   background: transparent;
 }
 
+#Kinesiology a {
+  color:;
+}
+
 #mainNav {
   border-bottom: 1px solid rgba(33, 37, 41, 0.1);
   background-color: #fff;
