ADD: bold class bold attribute

--- a/css/styles.css
+++ b/css/styles.css
@@ -221,6 +221,10 @@ header.masthead p {
   font-weight: 300;
 }
 
+.bold {
+  font-weight:bold;
+}
+
 @media (min-width: 768px) {
   header.masthead p {
     font-size: 1.15rem;
