--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,12 @@ img::-moz-selection {
   background: transparent;
 }
 
+#map {
+  width: 100%;
+  height: 400px;
+  background-color: grey;
+}
+
 #Kinesiology a {
   color:white;
 }
