--- a/css/styles.css
+++ b/css/styles.css
@@ -276,7 +276,7 @@ header.masthead p {
   header.masthead {
     height: 100vh;
     min-height: 650px;
-    padding-top: 0;
+    padding-top: 50px;
     padding-bottom: 0;
   }
   header.masthead h1 {
