--- a/css/styles.css
+++ b/css/styles.css
@@ -252,6 +252,12 @@ header.masthead {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  
+  /* Parallex Code - Set a specific height */
+  min-height: 500px; 
+  /* Create the parallax scrolling effect */
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 
 header.masthead hr {
